--- a/app/src/main/res/layout/activity_falta_agua.xml
+++ b/app/src/main/res/layout/activity_falta_agua.xml
@@ -1,188 +1,224 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.antonioreyes.aguas.FaltaAgua">
+    android:layout_height="match_parent"
+    tools:context="com.example.antonioreyes.aguas.FaltaAgua"
+    android:fillViewport="false"
+    android:id="@+id/aguaView">
 
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/imageButton3"
-        android:src="@drawable/atras"
-        android:scaleType="fitXY"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:onClick="regresaReportes3"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/ivicono"
-        android:src="@drawable/fa"
-        android:layout_alignTop="@+id/imageButton3"
-        android:layout_toRightOf="@+id/imageButton3"
-        android:layout_toEndOf="@+id/imageButton3" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/fondo_reportes"
+            android:layout_alignParentBottom="true"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="FALTA DE AGUA"
-        android:id="@+id/textView"
-        android:textSize="30dp"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/ivicono"
-        android:layout_alignBottom="@+id/ivicono"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:id="@+id/imageView2"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/menup_barra"
+            android:layout_alignParentTop="true"
+            />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="date"
-        android:ems="10"
-        android:id="@+id/dateTV"
-        android:layout_alignBottom="@+id/changeDateBtn"
-        android:layout_toLeftOf="@+id/changeDateBtn"
-        android:layout_toRightOf="@+id/textView2" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:src="@drawable/menup_aguas_tipo"
+            android:id="@+id/aguas_tipo"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="13dp"
+            />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Fecha"
-        android:id="@+id/textView2"
-        android:layout_alignBottom="@+id/dateTV"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/menup_boton2"
+            android:id="@+id/imageButton3"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:onClick="regresaReportes3"/>
 
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/changeDateBtn"
-        android:src="@drawable/cal"
-        android:scaleType="fitXY"
-        android:layout_below="@+id/ivicono"
-        android:layout_alignParentRight="true"
-        android:onClick="showDateWidget" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:src="@drawable/boton_reportar_on_03"
+            android:id="@+id/ivicono"
+            android:layout_below="@id/imageView2"
+            android:layout_marginTop="10dp"/>
 
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/changeTimeBtn"
-        android:src="@drawable/rel"
-        android:scaleType="fitXY"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="showTimeWidget" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="date"
+            android:ems="10"
+            android:id="@+id/dateTV"
+            android:layout_alignBottom="@+id/changeDateBtn"
+            android:layout_toLeftOf="@+id/changeDateBtn"
+            android:layout_toRightOf="@+id/textView2" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="time"
-        android:ems="10"
-        android:id="@+id/timeTV"
-        android:layout_alignBottom="@+id/changeTimeBtn"
-        android:layout_toLeftOf="@+id/changeTimeBtn"
-        android:layout_toRightOf="@+id/textView3"
-        android:layout_toEndOf="@+id/textView3" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Fecha"
+            android:id="@+id/textView2"
+            android:layout_alignBottom="@+id/dateTV"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="15dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Hora"
-        android:id="@+id/textView3"
-        android:layout_alignBottom="@+id/timeTV"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="50dp"
+            android:id="@+id/changeDateBtn"
+            android:src="@drawable/reporte_boton_fecha"
+            android:layout_below="@+id/ivicono"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="15dp"
+            android:onClick="showDateWidget"
+            />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Lugar"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/timeTV"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="30dp" />
+        <ImageButton
+            android:layout_width="70dp"
+            android:layout_height="50dp"
+            android:id="@+id/changeTimeBtn"
+            android:src="@drawable/rel"
+            android:scaleType="fitXY"
+            android:layout_below="@+id/textView2"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="15dp"
+            android:onClick="showTimeWidget" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:ems="10"
-        android:id="@+id/placeTV"
-        android:layout_below="@+id/textView4"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="time"
+            android:ems="10"
+            android:id="@+id/timeTV"
+            android:layout_alignBottom="@+id/changeTimeBtn"
+            android:layout_toLeftOf="@+id/changeTimeBtn"
+            android:layout_toRightOf="@+id/textView3"
+            android:layout_toEndOf="@+id/textView3" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cambiar Ubicación"
-        android:id="@+id/changeLocationBtn"
-        android:layout_below="@+id/placeTV"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="returnToMap1" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Hora"
+            android:id="@+id/textView3"
+            android:layout_alignBottom="@+id/timeTV"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="10dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Comentario"
-        android:id="@+id/textView5"
-        android:layout_below="@+id/changeLocationBtn"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Lugar"
+            android:id="@+id/textView4"
+            android:layout_below="@+id/timeTV"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="10dp"/>
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:ems="10"
-        android:id="@+id/commentTV"
-        android:layout_below="@+id/textView5"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/changeTimeBtn"
-        android:layout_alignEnd="@+id/changeTimeBtn" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:ems="10"
+            android:id="@+id/placeTV"
+            android:layout_below="@+id/textView4"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Agregar Foto"
-        android:id="@+id/addPhotoBtn"
-        android:layout_below="@+id/commentTV"
-        android:layout_centerHorizontal="true" />
+        <ImageView
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:id="@+id/changeLocationBtn"
+            android:src="@drawable/reporte_boton_ubicacion"
+            android:layout_below="@+id/placeTV"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="20dp"
+            android:onClick="returnToMap1" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enviar"
-        android:id="@+id/sendReportBtn"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/changeTimeBtn"
-        android:layout_alignEnd="@+id/changeTimeBtn"
-        android:onClick="saveReport" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Comentario"
+            android:id="@+id/textView5"
+            android:layout_below="@+id/changeLocationBtn"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="10dp"/>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:layout_below="@+id/addPhotoBtn"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/sendReportBtn" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:ems="10"
+            android:id="@+id/commentTV"
+            android:layout_below="@+id/textView5"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignRight="@+id/changeTimeBtn"
+            android:layout_alignEnd="@+id/changeTimeBtn"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
 
-</RelativeLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:src="@drawable/reporte_boton_foto"
+            android:id="@+id/addPhotoBtn"
+            android:layout_below="@+id/commentTV"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"/>
+
+        <ImageView
+            android:layout_width="140dp"
+            android:layout_height="50dp"
+            android:src="@drawable/reporte_boton_enviar"
+            android:id="@+id/sendReportBtn"
+            android:onClick="saveReport"
+            android:layout_below="@+id/commentTV"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="20dp"
+            android:layout_alignParentEnd="true" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:id="@+id/imageView"
+            android:layout_below="@+id/commentTV"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignLeft="@+id/addPhotoBtn"
+            android:layout_toLeftOf="@+id/changeLocationBtn"
+            android:layout_toStartOf="@+id/changeLocationBtn" />
+
+    </RelativeLayout>
+
+</ScrollView>
