--- a/app/src/main/res/layout/list_single.xml
+++ b/app/src/main/res/layout/list_single.xml
@@ -5,11 +5,12 @@
     <TableRow>
         <ImageView
             android:id="@+id/img"
-            android:layout_width="50dp"
-            android:layout_height="50dp"/>
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:scaleType="fitXY"/>
         <TextView
             android:id="@+id/txt"
             android:layout_width="wrap_content"
-            android:layout_height="50dp" />
+            android:layout_height="60dp" />
     </TableRow>
 </TableLayout>
