--- a/app/src/main/res/layout/activity_falta_agua.xml
+++ b/app/src/main/res/layout/activity_falta_agua.xml
@@ -52,8 +52,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:src="@drawable/boton_reportar_on_03"
-            android:id="@+id/ivicono"
+            android:src="@drawable/boton_reportar_on_01"
+            android:id="@+id/title_image"
             android:layout_below="@id/imageView2"
             android:layout_marginTop="10dp"/>
 
@@ -84,7 +84,7 @@
             android:layout_height="50dp"
             android:id="@+id/changeDateBtn"
             android:src="@drawable/reporte_boton_fecha"
-            android:layout_below="@+id/ivicono"
+            android:layout_below="@+id/title_image"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_marginRight="10dp"
