--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.antonioreyes.aguas.FaltaAgua"
+    tools:context="com.example.antonioreyes.aguas.ReportActivity"
     android:fillViewport="false"
     android:id="@+id/aguaView">
 
