--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -218,7 +218,9 @@
             android:id="@+id/addPhotoBtn"
             android:layout_below="@+id/commentTV"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp"
+            android:onClick="selectImage"
+            android:nestedScrollingEnabled="false" />
 
         <ImageView
             android:layout_width="140dp"
@@ -232,17 +234,11 @@
             android:layout_alignParentEnd="true" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:id="@+id/imageView"
-            android:layout_below="@+id/commentTV"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignLeft="@+id/addPhotoBtn"
-            android:layout_toLeftOf="@+id/changeLocationBtn"
-            android:layout_toStartOf="@+id/changeLocationBtn" />
-
-
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/imagePreview"
+            android:layout_alignTop="@+id/addPhotoBtn"
+            android:layout_alignLeft="@+id/addPhotoBtn" />
 
     </RelativeLayout>
 
