--- a/app/src/main/res/layout/activity_cuencas.xml
+++ b/app/src/main/res/layout/activity_cuencas.xml
@@ -40,7 +40,18 @@
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:onClick="regresarCuenca"
-        android:clickable="true" />
+        android:clickable="true"
+        android:onClick="regresarCuenca" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/cuenca_img"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:id="@+id/info_icon"
+        android:layout_below="@+id/imageView2"
+        android:layout_marginBottom="120dp"
+        />
 
 </RelativeLayout>
