--- a/app/src/main/res/layout/activity_glosario_terminos.xml
+++ b/app/src/main/res/layout/activity_glosario_terminos.xml
@@ -44,4 +44,15 @@
         android:onClick="regresarGlosarioTerminos"
         android:clickable="true" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/glosario_img"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:id="@+id/info_icon"
+        android:layout_below="@+id/imageView2"
+        android:layout_marginBottom="120dp"
+        />
+
 </RelativeLayout>
