--- a/app/src/main/res/layout/list_single.xml
+++ b/app/src/main/res/layout/list_single.xml
@@ -6,11 +6,13 @@
         <ImageView
             android:id="@+id/img"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:scaleType="fitXY"/>
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"/>
         <TextView
             android:id="@+id/txt"
             android:layout_width="wrap_content"
-            android:layout_height="60dp" />
+            android:layout_height="60dp"
+            android:visibility="gone" />
+
     </TableRow>
 </TableLayout>
