--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.antonioreyes.aguas.Confirmation">
+    tools:context="com.aguayciudad.aguas.app.Confirmation">
 
     <ImageView
         android:layout_width="wrap_content"
