--- a/app/src/main/res/layout/activity_maps_activity2.xml
+++ b/app/src/main/res/layout/activity_maps_activity2.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.antonioreyes.aguas.formulario_reporte">
+    tools:context="com.aguayciudad.aguas.app.formulario_reporte">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
