--- a/app/src/main/res/layout/activity_recomendaciones.xml
+++ b/app/src/main/res/layout/activity_recomendaciones.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.antonioreyes.aguas.Recomendaciones"
+    tools:context="com.aguayciudad.aguas.app.Recomendaciones"
     android:clickable="true"
     android:onClick="regresaInformacion">
 
